<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.tzi.use</groupId>
        <artifactId>plugins</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>monitor</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>it.cnr.imaa.essi</groupId>
            <artifactId>lablib-checkboxtree</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/lablib-checkboxtree-3.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>12.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/guava-12.0.jar</systemPath>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>${basedir}/src</sourceDirectory>
        <resources>
            <resource>
                <directory>${project.basedir}/resources</directory>
                <targetPath>resources</targetPath>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
            <resource>
                <directory>${project.basedir}</directory>
                <includes>
                    <include>useplugin.xml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <fork>true</fork>
                    <compilerArgs>
                        --add-exports=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <finalName>MonitorPlugin</finalName>
                    <archive>
                        <manifestFile>${project.basedir}/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
